vlib/v/parser/tests/prohibit_redeclaration_of_builtin_types.out
vlib/v/parser/tests/prohibit_redeclaration_of_builtin_types.vv:1:8: error: cannot register struct `Option`, another type with this name exists
    1 | struct Option {}
      |        ~~~~~~
Details: vlib/builtin/chan_option_result.v:137:8: details: another declaration was found here
  135 |
  136 | // Option is the base of V's internal option return system.
  137 | struct Option {
      |        ~~~~~~
  138 |     state u8 // 0 - ok; 2 - none; 1 - ?
  139 |     err   IError = none__
